src/objects/RMA__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Asset - If system is being returned add the System Serial Number or Name</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_s_Account_Name__c</fullName>
        <formula>Asset__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset&apos;s Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the RMA is selected through a case lookup the Case Number. Otherwise, if you create the RMA from the case it will be added here.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <inlineHelpText>This is the date the RMA was issued to the customer</inlineHelpText>
        <label>Date Issued</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_End_Date__c</fullName>
        <label>Exception End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Shipping_Account_IMO__c</fullName>
        <formula>Order__r.Shipping_Account__r.Vessel_IMO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Shipping Account IMO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Shipping_Acct__c</fullName>
        <formula>Order__r.Shipping_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Shipping Acct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Child or Sales Order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person_Requesting_RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to the contact requesting the RMA#</inlineHelpText>
        <label>Person Requesting RMA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Comment__c</fullName>
        <inlineHelpText>Additional comment - Note that you can also add notes to the RMA</inlineHelpText>
        <label>RMA Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <label>RMA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Final Assembly</fullName>
                </value>
                <value>
                    <fullName>Incoming Processing</fullName>
                </value>
                <value>
                    <fullName>In Evaluation</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Receipt</fullName>
                </value>
                <value>
                    <fullName>Returned Unrepaired</fullName>
                </value>
                <value>
                    <fullName>Shipped Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_RMA__c</fullName>
        <label>Reason for RMA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Cancelled</fullName>
                </value>
                <value>
                    <fullName>Exchange/Renewal</fullName>
                </value>
                <value>
                    <fullName>Financial Reasons</fullName>
                </value>
                <value>
                    <fullName>Received without RMA</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Vessel Scrapped</fullName>
                </value>
                <value>
                    <fullName>Vessel SOLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The RMA was Received by (User)</inlineHelpText>
        <label>Received By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RMA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RMA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>